# nydok

./: .flake8  .gitignore  DEVELOPING.md  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
docs/: cli.md  csv-report.md  extra.css  installation.md  intro.md  overview.md  plugin.md  specs-intro.md  writing-specifications.md  writing-tests.md
docs/development/: DEVELOPING.md
docs/material-overrides/: home.html
docs/reports/: code-review.md  pipeline-logs.md  risk-assessment.md  test-reports.md  traceability-matrix.md
nydok/: __init__.py  cli.py  exception.py  gitlab.py  report.py  schema.py
nydok/markdown_ext/: __init__.py  markdown_nydok.py  nydok.css
nydok/plugin/: junit.py  plugin.py  specification.py  specsmanager.py  testcase.py
ops/dev/: build-package.sh  publish-package.sh
ops/docs/: build.sh  serve.sh
ops/tests/: run-linting.sh  run-tests.sh
tests/: plugin.spec.md  report.spec.md  risk_assessment.yml  test_plugin_spec.py  test_report_spec.py  test_risk_assessment.py  test_urs_spec.py  urs.spec.md
tests/snapshots/: code-change-report.md  pipeline-logs-report.md  risk-report.md  test-cases.md  test-overview.md  traceability-matrix-report.md
