[tool.poetry]
name = "nydok"
version = "v0.0"
description = "Documentation and specification testing framework"
authors = ["Nykode Therapeutics <insaid@nykode.com>"]
license = "MIT"
classifiers = []
packages = [
  { include = "nydok" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = ">=6.2.5"
PyYAML = ">=6.0"
requests = ">=2.28.1"
lxml = ">=4.8.0"
click = ">=8.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.9"
pytest-cov = "^2.11.1"
coverage = {extras = ["toml"], version = "^5.5"}
mypy = "^1.15.0"
isort = "^5.9.3"
mkdocs-material = "^8.5.10"
mkdocs-click = "^0.6.0"
types-PyYAML = "^6.0.7"
pytest-httpserver = "^1.0.5"
types-Markdown = "^3.4.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nydok = 'nydok.cli:cli'

[tool.poetry.plugins."pytest11"]
nydok = "nydok.plugin.plugin"

[tool.ruff]
lint.unfixable = ["B", "F841", "F401"]
line-length = 100
lint.per-file-ignores = {"__init__.py" = ["E402", "F401"]}
lint.pydocstyle = {convention = "google"}

[tool.coverage.run]
omit = [ "tests/*" ]
